--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -5,6 +5,11 @@ html {
 }
 body {
   font-family: 'Source Sans Pro';
+  background: #000000;
+}
+
+h1, h2, h3{
+  font-weight: 100;
 }
 
 .wrap-bg {
@@ -14,15 +19,6 @@ body {
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(
-      90deg,
-      rgba(255, 255, 255, 0.1) 0,
-      rgba(255, 255, 255, 0.1) 100%
-    ),
-    url(../img/kigali.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
   color: #ffffff;
 }
 .wrap-bg .container{
